stylesheet/style.css
:root {
  --ff-sans: "IBM Plex Sans", sans-serif;
  --ff-serif: "IBM Plex Serif", serif;

  /* small screen font-sizes */
  --fs-200: 0.75rem;
  --fs-300: 1rem;
  --fs-400: 1.25rem;
  --fs-500: 1.375rem;
  --fs-600: 1.75rem;
  --fs-900: 2.125rem;

  --fw-100: 100;
  --fw-200: 200;
  --fw-300: 300;
  --fw-400: 400;
  --fw-700: 700;

  --shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.1);

  --clr-neutral-100: #fff;
  --clr-neutral-200: #eef1f6;
  --clr-neutral-300: #a9afbc;
  --clr-neutral-400: #737b8c;
  --clr-neutral-500: #434956;
  --clr-neutral-900: #020203;

  --clr-primary-300: #f3f7ff;
  --clr-primary-400: #8ea8da;

  --shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.1);

  --spacer: 1rem;
}

/* resets */
*,
*::before,
*::after {
  box-sizing: border-box;
}

body,
h1,
h2,
h3,
p {
  margin: 0;
}

h2 {
  color: var(--clr-neutral-400);
}

img {
  width: auto;
  max-width: 100%;
  border-radius: var(--spacer);
}

/* Utility classes */
.flow-content > * + * {
  margin-top: var(--flow-space, var(--spacer));
}

section {
  --pad-section: 1rem;
}

@media (min-width: 40em) {
  section {
    --pad-section: 2rem;
  }
}

.container {
  padding: var(--pad-section, 0) var(--pad-section, calc(var(--spacer) * 2));
  max-width: 68rem;
  margin: 0 auto;
}

.split {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.split > * + * {
  margin: calc(var(--spacer) * 3) 0 0 0;
}

.split--nav {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.split--nav > * + * {
  margin: 0 0 0 var(--flex-space, var(--spacer));
}

@media (min-width: 40em) {
  .split {
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
  }

  .split > * {
    flex-basis: 20rem;
    flex-grow: 1;
  }

  .split > * + * {
    margin: 0 0 0 var(--flex-space, var(--spacer));
  }

  .col25 {
    flex-basis: 25%;
  }

  .col40 {
    flex-basis: 40%;
  }

  .col50 {
    flex-basis: 50%;
  }
 
  .col60 {
    flex-basis: 60%;
  }

  .col75 {
    flex-basis: 75%;
  }

  .col100 {
    flex-basis: 100%;
  }
}

.card {
  --flow-space: .5rem;
  padding: 1.5rem;
  transition: 400ms;
}

.center-text {
  text-align: center;
}

.top-nav {
  visibility: hidden;
}

@media (min-width: 40em) {
  .top-nav {
    visibility: visible;
  }
}

/* General Styling */
body {
  font-family: var(--ff-serif);
  font-weight: var(--fw-100);
  font-size: var(--fs-400);
  color: var(--clr-neutral-900);
  line-height: 1.6;
}

body > * {
  --flow-space: 2rem;
  margin: var(--spacer);
  border-radius: var(--spacer);
  font-family: inherit;
  line-height: inherit;
  color: inherit;
}

a {
  text-decoration: none;
  color: var(--clr-neutral-900);
  font-weight: var(--fw-700);
}

a:hover {
  color: var(--clr-neutral-500);
}

h1,
h2,
h3 {
  font-weight: var(--fw-700);
  line-height: 1.1;
}

h1 {
  font-size: var(--fs-900);
}
h2 {
  font-size: var(--fs-600);
}
h3 {
  font-size: var(--fs-500);
}

h4 {
  font-size: var(--fs-400);
  color: var(--clr-neutral-400);
}

.container h2 + * {
  margin-top: 0;
}

ul[class] {
  list-style: none;
  padding: 0;
}

header {
  height:  30rem;
  padding: 2rem;
  background-size: cover;
  background-repeat: no-repeat;
}

time {
  font-size: var(--fs-200);
  color: var(--clr-neutral-400);
}

time + time {
  margin-left: 2.5rem;
}

hr {
  color: var(--clr-neutral-200);
  opacity: .5;
}

footer {
  text-align: center;
}

@media (min-width: 40em) {
footer > div.split {
  flex-direction: row-reverse;
  justify-content: space-around;
  align-items: center;
}
}

.container a {
  display: inline-block;
}

.card:hover {
  padding: 1rem;
  box-shadow: var(--shadow);
  border-radius: var(--spacer);
  transition: ease-in-out 400ms;
}

.bottom-nav {
  background: var(--clr-neutral-900);
  color: var(--clr-neutral-100);
}

@media (min-width: 40em) {
  .bottom-nav {
    display: none;
  }
}

.mobile-nav {
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-evenly;
}

.mobile-nav--item {
  padding: 1em;
  margin: 0 auto;
}

.preview {
  --flex-space: 2rem;
}

.preview span {
  display: block;
}

.sitemap {
  --flow-space: .75rem;
}

/* SPECIFIC SECTIONS */

/* Home Page */
.header--home {
  background-image: url(../img/hero.jpg);
  background-position: center;
}

.preview--blog {
  background: var(--clr-primary-300);
}

/* Blog Page */
.header--blog {
  background-image: url(../img/blog.jpg);
  background-position: right;
}

/* Story Page */

.header--story {
  background-image: url(../img/article.jpg);
  background-position: right;
}

.preview--story--grid {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
}

